--- a/GhostCam/Base.lproj/Main.storyboard
+++ b/GhostCam/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="40D-bg-YhO">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="40D-bg-YhO">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -157,8 +157,8 @@
                                             </constraint>
                                         </constraints>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="gUG-HL-BYw" userLabel="Controls">
-                                        <rect key="frame" x="236.5" y="544" width="127" height="37"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="gUG-HL-BYw" userLabel="Controls">
+                                        <rect key="frame" x="231.5" y="544" width="137" height="37"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NYy-Rp-8kL" userLabel="SpeedDown">
                                                 <rect key="frame" x="0.0" y="0.0" width="25" height="37"/>
@@ -168,14 +168,14 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Wx-7h-fxj" userLabel="PlayPause">
-                                                <rect key="frame" x="45" y="0.0" width="37" height="37"/>
+                                                <rect key="frame" x="50" y="0.0" width="37" height="37"/>
                                                 <state key="normal" image="Play"/>
                                                 <connections>
                                                     <action selector="playPause:" destination="QeJ-f2-hIC" eventType="touchUpInside" id="J10-oD-Cnj"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kly-70-g3h" userLabel="SpeedUp">
-                                                <rect key="frame" x="102" y="0.0" width="25" height="37"/>
+                                                <rect key="frame" x="112" y="0.0" width="25" height="37"/>
                                                 <state key="normal" image="StepForward"/>
                                                 <connections>
                                                     <action selector="speedUp:" destination="QeJ-f2-hIC" eventType="touchUpInside" id="f2C-le-OAZ"/>
